kubernetes/base/sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync
  namespace: kikplate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync
  template:
    metadata:
      labels:
        app: sync
    spec:
      containers:
        - name: sync
          image: ghcr.io/moeidheidari/kikplate-api:latest
          imagePullPolicy: IfNotPresent
          args:
            - app:sync
          volumeMounts:
            - name: app-config
              mountPath: /app/config/config.yaml
              subPath: config.yaml
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: app-config
          configMap:
            name: app-config
