kubernetes/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kikplate
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3001
      targetPort: 3001
