kubernetes/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kikplate
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
