kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kikplate
  namespace: kikplate
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kikplate.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
